--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "homepage": "https://github.com/werts/wishare-cli#readme",
   "devDependencies": {
     "liftoff": "^2.2.5"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "log-util": "^1.1.2",
+    "minimist": "^1.2.0",
+    "v8flags": "^2.0.11"
   }
 }
