--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
+    "commander": "^2.9.0",
     "log-util": "^1.1.2",
     "minimist": "^1.2.0",
     "v8flags": "^2.0.11"
