--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cli",
     "liftoff"
   ],
+  "bin": {
+    "wishare": "bin/wishare"
+  },
   "author": "werts",
   "license": "MIT",
   "bugs": {
