--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
+    "co": "^4.6.0",
+    "co-fs": "^1.2.0",
+    "co-prompt": "^1.0.0",
     "commander": "^2.9.0",
     "log-util": "^1.1.2",
     "minimist": "^1.2.0",
