--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [
     "cli",
-    "liftoff"
+    "wishare"
   ],
   "bin": {
     "wishare": "bin/wishare.js"
@@ -23,16 +23,12 @@
     "url": "https://github.com/werts/wishare-cli/issues"
   },
   "homepage": "https://github.com/werts/wishare-cli#readme",
-  "devDependencies": {
-    "liftoff": "^2.2.5"
-  },
   "dependencies": {
     "chalk": "^1.1.3",
     "co": "^4.6.0",
     "co-fs": "^1.2.0",
     "co-prompt": "^1.0.0",
     "commander": "^2.9.0",
-    "log-util": "^1.1.2",
     "minimist": "^1.2.0",
     "v8flags": "^2.0.11"
   }
